[options]
packages =
    mbaza_mv_predicted
package_dir=
    =src
install_requires =
    dill==0.3.6
    numpy==1.24.3
    pandarallel==1.6.5
    pandas==2.0.2
    Pillow==9.5.0
    pydantic==1.10.8
    tqdm==4.65.0

[options.packages.find]
where=src

[metadata]
name = mbaza_mv_predicted
version = 0.1
description = Post-processing script for Mbaza to copy images to predicted folder

[options.entry_points]
console_scripts =
    mbaza_mv_predicted = mbaza_mv_predicted.main:main